crates/rome_cli/tests/snapshots/main_commands_rage/rage_ok.snap
---
source: crates/rome_cli/tests/commands/rage.rs
expression: content
---
# Emitted Messages

```block
CLI:
  Version:              0.0.0
  Color support:        **PLACEHOLDER**

Platform:
  CPU Architecture:     **PLACEHOLDER**
  OS:                   **PLACEHOLDER**

Environment:
  ROME_LOG_DIR:         "/tmp/rome-rage-test"
  NO_COLOR:             **PLACEHOLDER**
  TERM:                 **PLACEHOLDER**

Rome Configuration:
  Status:               unset

Server:
  Version:              0.0.0
  Name:                 rome_lsp
  CPU Architecture:     **PLACEHOLDER**
  OS:                   **PLACEHOLDER**

Workspace:
  Open Documents:       0
```


